# HomeOps

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: space_app.py
baseline/: run_baseline.py  run_openai_baseline.py
homeops/: env.py  graders.py  models.py  reward.py  scenarios.py  utils.py
homeops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: app.py
tests/: test_app_smoke.py  test_baseline.py  test_env.py  test_graders.py  test_manifest_and_scenarios.py
