[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeops"
version = "0.1.0"
description = "HomeOps: a household task-management OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "gradio>=4.0.0",
  "openai>=1.0.0",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["homeops", "baseline", "app", "server"]